--- a/grid/exercice_responsive_grid/responsive_grid.css
+++ b/grid/exercice_responsive_grid/responsive_grid.css
@@ -2,18 +2,33 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 30px;
     font-weight: bold;
     color: white;
 }
 
 #grille{
     display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 3fr repeat(3, 1fr);
+    text-transform: uppercase;
+    grid-gap: 3px;
+    height: 100vh;
+    margin: 30px;
 }
 
-header,
+.flexbox{
+    padding: 30px;
+}
+
+header{
+    background-color: #0171c5;
+    /* grid-area: header; */
+}
+
 footer{
     background-color: #0171c5;
+    /* grid-area: header; */
 }
 
 article{
@@ -26,4 +41,37 @@ nav{
 
 aside{
     background-color: #0077ff;
+}
+
+@media screen AND (min-width: 960px) {
+    #grille{
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-rows: 1fr 3fr 1fr;
+        text-transform: uppercase;
+        margin: 30px;
+    }
+
+    header{
+        grid-column: 1 / span 3;
+        
+    }
+    
+    footer{
+        grid-column: 1 / span 3;
+        order: 4;
+    }
+    
+    nav{
+        order: 1;
+    }
+
+    article{
+        order: 2;
+    }
+    
+    aside{
+        order: 3;
+    }
+
+    
 }
