animation_css_9_projet - suite

--- a/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.6 Menu Rideau/style.css
+++ b/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.6 Menu Rideau/style.css
@@ -41,6 +41,7 @@ span {
     color: #f1f1f1;
 }
 
+/* personnalisation de la croix */
 .overlay .closeBtn {
     position: absolute;
     top: 20px;
