--- a/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.7 Before et After/style.css
+++ b/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.7 Before et After/style.css
@@ -24,6 +24,9 @@ body {
     text-transform: uppercase;
     overflow: hidden;
 }
+
+/* Création de la diagonale - début animation */
+/* on peut écrire avec before ou after */
 .btn::after {
     content: '';
     background: #45a29e;
