--- a/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.8 Clip Path/style.css
+++ b/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.8 Clip Path/style.css
@@ -14,6 +14,8 @@ body {
     url("https://images.unsplash.com/photo-1564760055775-d63b17a55c44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1356&q=80");
     background-size: cover;
     background-position: top;
+    /* Donner une forme (site : clip-path maker) */
+    /* https://bennettfeely.com/clippy/  */
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
 
