Formation menu navbar

--- a/formation_menu_navbar/FormationNavbar-master/Code source Fin/6. MenuLanguette/style.css
+++ b/formation_menu_navbar/FormationNavbar-master/Code source Fin/6. MenuLanguette/style.css
@@ -3,6 +3,8 @@
     margin: 0;
     padding: 0;
 }
+
+/* pour cacher la scrollbar dans safari */
 ::-webkit-scrollbar {
     width: 0;
     height: 0;
