--- a/formation_menu_navbar/FormationNavbar-master/Code source Fin/2. NavPopUpBlob/style.css
+++ b/formation_menu_navbar/FormationNavbar-master/Code source Fin/2. NavPopUpBlob/style.css
@@ -39,6 +39,8 @@ body {
     transform: translate(-50%, -50%);
     transition: all 0.1s ease-in-out;
 }
+
+/* Pour éviter de créer plrs lignes pour le menu burger */
 .ligne::before {
     content: '';
     position: absolute;
