--- a/formation_menu_navbar/FormationNavbar-master/Code source Fin/5.MenuRond/style.css
+++ b/formation_menu_navbar/FormationNavbar-master/Code source Fin/5.MenuRond/style.css
@@ -31,6 +31,7 @@ body {
     right: 40px;
     top: 58px;
     z-index: 50;
+    /* pour que ça ignore le clique sur les lignes mais que sur le btn */
     pointer-events: none;
     transition: all 0.2s ease-in-out;
 }
